--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Hello World
+Investingating placing Holohosts in space. It seems like a good idea.
+See Also: <a href="http://bshambaugh.org">My personal site</a>
