correct typo on website

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-Investingating placing Holohosts in space. It seems like a good idea.
+Investingating: placing Holohosts in space. It seems like a good idea.
 See Also: <a href="http://bshambaugh.org">My personal site</a>
