--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-Investigating: placing Holohosts in space. It seems like a good idea.
+Investigating placing Holohosts in space. It seems like a good idea.
 See Also: <a href="http://bshambaugh.org">My personal site</a>
