holohosts in space

--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-Investigating placing Holohosts in space. It seems like a good idea.
-See Also: <a href="http://bshambaugh.org">My personal site</a>
+---
+layout: default
+title: Home
+---
+<h1>{{ "Hello World!" | downcase }}</h1>
