--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: default
 title: Home
 ---
-<h1>{{ "Hello World!" | downcase }}</h1>
+<h1>{{ "Blinky Project: <a href="https://www.youtube.com/playlist?list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT">Blinky Project Channel</a> | downcase }}</h1>
