change the index.html site

--- a/index.html
+++ b/index.html
@@ -2,4 +2,13 @@
 layout: default
 title: Home
 ---
-<h1>hello world!</h1>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+  </body>
+</html>
