--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ title: Home
     <title>Home</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Hello Fuzzy World!</h1>
   </body>
 </html>
