tried adding a link

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@ title: Home
   </head>
   <body>
     <h1>Hello Fuzzy World!</h1>
+    <a href="https://www.youtube.com/playlist?list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT">The Blinky Project</a>
   </body>
 </html>
