--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@ title: Home
   <body>
     <ul>
      <li><a href="https://www.youtube.com/playlist?list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT">The Blinky Project Playlist</a></li>
-     <li>...</li>
-     <li><a href="https://www.youtube.com/watch?v=tCnqrZda-Wc&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=4">FCCOKC - Aug 2020 - talk - (From Blinky Project videos 1 & 2) : gives short overview to the project</a></li>
-     <li>...</li>
+     <li></li>
+     <li> --- <a href="https://www.youtube.com/watch?v=tCnqrZda-Wc&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=4">FCCOKC - Aug 2020 - talk - (From Blinky Project videos 1 & 2) : gives short overview to the project</a></li>
      <ul>
 	     <li>The FCCOKC Talk contains parts from:</li>
 	     <li><a href="https://www.youtube.com/watch?v=bFr6qjkxKNQ&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=2">Blinky Project 1 or Connecting a Single Channel LoRa Network to a WiFi Network</a></li>
 	     <li><a href="https://www.youtube.com/watch?v=OhYyUIJ2CHM&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=3">Blinky Project 2 or Connecting a Single Channel LoRa Network to a WiFi Network</a></li>
      </ul>
-     <li>...</li>
+     <li></li>
      <li><a href="https://www.youtube.com/watch?v=GNOPb5iGiQk&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=1">Blinky Project 3 or Working with the CryptoChip: video 3 : Setting up the Cryptographic Co-Processor to associate with a DID</a></li>
-     <li>...</li>
+     <li></li>
      <li><a href="https://www.youtube.com/watch?v=yFi4LcselCc&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=5">ATECC508A Cryptographic Co-Processor Chip with BH1750 sensor : Fixing bugs from Blinky Project 3 or Working with the CryptoChip: video 3</a></li>
     </ul>
 
     Big Box of used pinball machine parts that I pulled from: <a href="https://github.com/bshambaugh/blinky_project_ede_code/tree/master">Blinky Project Sources</a> (see credits for respective developers). 
 
+    Possible Connection to EISPP: <a href="http://bshambaugh.org/eispp/#ch_1_2_Botqueue_IOT">ch_1_2_Botqueue_IOT</a>
+    Thanks to Zdvarko, I discovered The HomePort Network is a bit like the concept. <a href="https://homeport.network/">The HomePort Network</a> 
   </body>
 </html>
