added satellite and wx sat connection links

--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@ title: Home
      <li><a href="https://www.youtube.com/watch?v=yFi4LcselCc&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=5">ATECC508A Cryptographic Co-Processor Chip with BH1750 sensor : Fixing bugs from Blinky Project 3 or Working with the CryptoChip: video 3</a></li>
     </ul>
 
-    Big Box of used pinball machine parts that I pulled from: <a href="https://github.com/bshambaugh/blinky_project_ede_code/tree/master">Blinky Project Sources</a> (see credits for respective developers). 
+    Big Box of used pinball machine parts that I pulled from: <a href="https://github.com/bshambaugh/blinky_project_ede_code/tree/master">Blinky Project Sources</a> (see credits for respective developers).<br><br> 
 
-    Possible Connection to EISPP: <a href="http://bshambaugh.org/eispp/#ch_1_2_Botqueue_IOT">ch_1_2_Botqueue_IOT</a>
-    Thanks to Zdvarko, I discovered The HomePort Network is a bit like the concept. <a href="https://homeport.network/">The HomePort Network</a> 
+    Possible Connection to EISPP: <a href="http://bshambaugh.org/eispp/#ch_1_2_Botqueue_IOT">ch_1_2_Botqueue_IOT</a><br>
+    Thanks to Zdvarko, I discovered The HomePort Network is a bit like the concept. <a href="https://homeport.network/">The HomePort Network</a><br><br>
+
+    Other Links to explore:<br>
+    <a href="https://github.com/Blockstream/satellite">https://github.com/Blockstream/satellite</a> (Satellite that gives the blockchain. HomePort and LoRa sats would act as relays?)<br>
+    <a href="https://www.rtl-sdr.com/rtl-sdr-tutorial-receiving-noaa-weather-satellite-images/">https://www.rtl-sdr.com/rtl-sdr-tutorial-receiving-noaa-weather-satellite-images/</a> (Practice for linking to Satellites)
   </body>
 </html>
