--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@ title: Home
     <title>Home</title>
   </head>
   <body>
+    <h2>Early Explorations with LoRa extended WiFi networks, MCUs, and Cryptographic-Coprocessors</h2>
+    <p>
+    Start with the FCCOKC Talk or follow the videos in this order: Blinky Project {1,2,3}, ATECC508ACryptoGraphic Co-Processor with BH1750 Sensor.
+    </p>
     <ul>
      <li><a href="https://www.youtube.com/playlist?list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT">The Blinky Project Playlist</a></li>
      <li></li>
