minor style changes

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ title: Home
 	     <li><a href="https://www.youtube.com/watch?v=OhYyUIJ2CHM&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=3">Blinky Project 2 or Connecting a Single Channel LoRa Network to a WiFi Network</a></li>
      </ul>
      <li></li>
-     <li><a href="https://www.youtube.com/watch?v=GNOPb5iGiQk&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=1">Blinky Project 3 or Working with the CryptoChip: video 3 : Setting up the Cryptographic Co-Processor to associate with a DID</a></li>
+     <li><a href="https://www.youtube.com/watch?v=GNOPb5iGiQk&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=1">Blinky Project 3 or Working with the CryptoChip: video 3 </a> : Setting up the Cryptographic Co-Processor to associate with a DID</li>
      <li></li>
-     <li><a href="https://www.youtube.com/watch?v=yFi4LcselCc&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=5">ATECC508A Cryptographic Co-Processor Chip with BH1750 sensor : Fixing bugs from Blinky Project 3 or Working with the CryptoChip: video 3</a></li>
+     <li><a href="https://www.youtube.com/watch?v=yFi4LcselCc&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=5">ATECC508A Cryptographic Co-Processor Chip with BH1750 sensor</a> : Fixing bugs from Blinky Project 3 or Working with the CryptoChip: video 3</li>
     </ul>
 
     Big Box of used pinball machine parts that I pulled from: <a href="https://github.com/bshambaugh/blinky_project_ede_code/tree/master">Blinky Project Sources</a> (see credits for respective developers).<br><br> 
