add comments about video that I am suing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ title: Home
 	     <li><a href="https://www.youtube.com/watch?v=OhYyUIJ2CHM&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=3">Blinky Project 2 or Connecting a Single Channel LoRa Network to a WiFi Network</a></li>
      </ul>
      <li></li>
-     <li><a href="https://www.youtube.com/watch?v=GNOPb5iGiQk&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=1">Blinky Project 3 or Working with the CryptoChip: video 3 </a> : Setting up the Cryptographic Co-Processor to associate with a DID</li>
+     <li><a href="https://www.youtube.com/watch?v=GNOPb5iGiQk&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=1">Blinky Project 3 or Working with the CryptoChip: video 3 </a> : Setting up the Cryptographic Co-Processor to associate with a DID<br>
+     Currently I am experimenting with ATECC508A breakout boards by SparkFun which use the P-256 curve. I have a few NXP SE050 cryptographic co-processors which provide a Ed25519 curve that may be substituted?</li>
      <li></li>
      <li><a href="https://www.youtube.com/watch?v=yFi4LcselCc&list=PLbVZNfQhcZ3eQpiBUY_0IaXPmPE5pZoOT&index=5">ATECC508A Cryptographic Co-Processor Chip with BH1750 sensor</a> : Fixing bugs from Blinky Project 3 or Working with the CryptoChip: video 3</li>
     </ul>
