--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Home
 
     Big Box of used pinball machine parts that I pulled from: <a href="https://github.com/bshambaugh/blinky_project_ede_code/tree/master">Blinky Project Sources</a> (see credits for respective developers).<br><br> 
 
-    Possible Connection to EISPP: <a href="http://bshambaugh.org/eispp/#ch_1_2_Botqueue_IOT">ch_1_2_Botqueue_IOT</a><br>
+    Possible Connection to EISPP: <a href="http://bshambaugh.org/eispp/#ch_1_2_Botqueue_IOT">ch_1_2_Botqueue_IOT</a>, <a href="https://www.youtube.com/watch?v=_K63xFiI3Pk">ch_1_2_Botqueue_IOT (wireframe animation)<br>
     Thanks to Zdvarko, I discovered The HomePort Network is a bit like the concept. <a href="https://homeport.network/">The HomePort Network</a><br><br>
 
     Other Links to explore:<br>
